yiltc-v0.2-backup/testsuite/negative/unreachable_code.yilt
fn foo()
    return 1
    let x = 2
